# tetrio-api

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: fetch_user_uncached.rs  fetch_user_with_cache.rs  prepare-tests.rs
src/: lib.rs
src/http/: cached_client.rs  client.rs  error.rs  mod.rs  value_bound_query.rs
src/http/caches/: cache.rs  mod.rs  moka.rs  noop_cache.rs  redis_cache.rs
src/http/clients/: http_client.rs  mod.rs  reqwest_client.rs
src/http/parameters/: leaderboard_query.rs  mod.rs  personal_user_records.rs  summary.rs  value_bound_query.rs
src/models/: cache.rs  common.rs  mod.rs  packet.rs
src/models/general/: achivement_info.rs  activity.rs  mod.rs  stats.rs
src/models/labs/: league_ranks.rs  leagueflow.rs  mod.rs  scoreflow.rs
src/models/news/: latest.rs  mod.rs  news.rs  news_details.rs
src/models/streams/: league_stream.rs  mod.rs  stream.rs
src/models/users/: mod.rs  user_achievements.rs  user_badge.rs  user_connections.rs  user_distinguishment.rs  user_history_leaderboard.rs  user_info.rs  user_leaderboard.rs  user_rank.rs  user_records.rs  user_role.rs  user_search.rs
src/models/users/lists/: league.rs  league_full.rs  mod.rs  xp.rs
src/models/users/summaries/: achievements.rs  blitz.rs  mod.rs  sprint.rs  tetra_league.rs  zen.rs  zenith.rs  zenithex.rs
src/models/users/user_records/: blitz_record.rs  league_record.rs  mod.rs  sprint_record.rs  zenith_record.rs  zenithex_record.rs
tests/: cached_http_client.rs  http_client.rs  in_memory_client_mock.rs  redis_cached_client_mock.rs
