[package]
name = "tetrio-api"
version = "0.2.0"
edition = "2021"
description = "A wrapper around the https://ch.tetr.io/ public API."
readme = "README.md"
license = "MIT"
repository = "https://github.com/takathediscordbot/tetrio-api"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-timer = "0.7.4"
async-trait = "0.1.64"
moka = {version = "0.12", features = ["future"] }
ordered-float = "4.1"

reqwest = {version = "0.11.14", features = ["json"] }
serde = {version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.93"

[dev-dependencies]
tokio = {version="1.25.0", features = ["macros"]}
tokio-test = "0.4.2"