[package]
name = "tetrio-api"
version = "0.6.0"
edition = "2021"
description = "A wrapper around the https://ch.tetr.io/ public API."
readme = "README.md"
license = "MIT"
repository = "https://github.com/takathediscordbot/tetrio-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lock = "3.4.0"
async-trait = "0.1.64"
bytes = "1.7.1"
futures = "0.3.30"
futures-core = "0.3.30"
http = "1.1.0"
moka = {version = "0.12", features = ["future"], optional = true}
redis = {version = "0.26.1", optional = true}

reqwest = {version = "0.12.7", features = ["json"], optional = true}
serde = {version = "1.0.199", features = ["derive", "rc"] }
serde_json = "1.0.93"
serde_path_to_error = "0.1.16"
tower = {version = "0.5.0", features = ["util", "limit"]}
tower-util = "0.3.1"
url = "2.5.2"

[dev-dependencies]
tokio = {version="1.25.0", features = ["macros", "rt-multi-thread"]}

[features]
in_memory_cache = ["moka"]
reqwest_http_client = ["reqwest"]
redis_cache = ["redis"]
default = ["in_memory_cache", "reqwest_http_client", "redis_cache"]
